# eurobot2019_ws

./: The_experiment_final_code.ino  WebserverWithMotors_Eperiment_WorkingCode_.ino  led_experiment.ino
src/: HELP_CMDS.md  HOW_TO_INSTALL_LAUNCH_FILE.md  LICENSE  README.md  ROS.gitignore
src/LineFollowingWorldSkills2019/: CMakeLists.txt  package.xml
src/app_interface_ui/: CMakeLists.txt  package.xml
src/eurobot_bringup/: CMakeLists.txt
src/eurobot_bringup/launch/: eurobot_final.launch  minimal.launch  robot.launch  sensors.launch  web_server.launch
src/image_recognition/: CMakeLists.txt  package.xml
src/navigation/: package.xml
src/navigation/scripts/: vel_listener.py
src/navigation/src/: patrol.py
src/pozyx/: CMakeLists.txt  package.xml
src/pozyx/maps/: KEC_BuildingCorrected.pgm  MakeROSMap.py  READme.md  Sample_map.yaml
src/pozyx/pozxy_arduino/: Pozyx.h
src/pozyx/src/: initialPose_subscriber.py  serialRead.py  tf_pozyx_broadcaster.py
src/robot_description/config/: README.md  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  robot_config.yaml
src/robot_description/model/: robot2.urdf  robot_1.urdf
src/robot_drivers/: CMakeLists.txt
src/robot_drivers/includes/: drive_train_manager.h  drive_train_manager_test.h  drive_train_ros_handler.h  epos_drive_manager.h  epos_drive_manager_test.h  pid.h  robot_params.h
src/robot_drivers/launch/: eurobot_task.launch  how_to_install.md
src/robot_drivers/libraries/EPOS_Linux_Library/: install.sh
src/robot_drivers/libraries/EPOS_Linux_Library/examples/HelloEposCmd/: Definitions.h  HelloEposCmd  HelloEposCmd.cpp
src/robot_drivers/libraries/EPOS_Linux_Library/include/: Definitions.h
src/robot_drivers/script/: LineFollowingReadandWriteCodePololuQTR_8.py  LineFollowingWithCalibration.py  LineSensor.py  del.py  eurobot_solutions.py  eurobot_task.py  homologation.py  left_side.json  pid_controller.py  right_side.json  robot_interface.py  robot_interface_advanced.py  support_functions.py  temp_prev_5.txt  testing_robot_interface.py  tmp.py  tmp_2.py  tmp_3.py  tmp_eurobot_task.py  world_skills.py  world_skills_final.py  world_skills_task.py  ws.py
src/robot_drivers/script/old_scripts/: eurobot_task_copy.py  old_eurobot_task.py.save  purple_side.py
src/robot_drivers/src/: drive_train_manager.cpp  drive_train_ros_handler.cpp  epos_drive_manager.cpp  pid.cpp  practice_epos_control.cpp
src/robot_drivers/src/tests/: drive_train_manager_test.cpp  epos_drive_manager_test.cpp  test_drive_train.cpp  test_drive_train_tune_pid.cpp  test_epos.cpp  test_pid.cpp
src/robot_grippers/: CMakeLists.txt  package.xml
src/robot_grippers/launch/: robot_grippers.launch
src/robot_grippers/scripts/: main.py
src/robot_vision/: CMakeLists.txt  _color-tracking-with-outline.py.swp  circles-hough-detection.py  feature-detection.py  feature-matching.py  mask_trackbar.py  object_tracking.py  package.xml  track-square.py  video.py
src/robot_vision/launch/: robot_vision.launch
src/robot_vision/scripts/: circles-find-number.py  color-tracking-circle-outline.py  color-tracking-with-outline.py  draw-contours-figures-img.py  dynamic-color-tracking.py  feature-matching.py  feature-object-tracking-homography.py  fps_counter.py  homography.py  hough-detection-jupyter.py  mask_trackbar_shape_d.py  optical-flow-lucas-kanade-method.py  ros_main.py  template-open-cv.py  testing_camera.py  tracking-mul-col-labels.py  tracking-multiple-colors-labels.py  visualize_image_msgs.py  where-is-puk-filter.py
src/sensor_drivers/launch/: lidar_sim.launch
src/sensor_drivers/scripts/: RangeSensor.py  range_sensors_ros_handler.py  serial_com_data_handler.py
src/web_server/launch/: web_server.launch
src/web_server/scripts/: main.py  ros_main.py  (+2 more)
src/world_description/: CMakeLists.txt
(+79 files in other folders)
